[metadata]
name = plover_comment
version = 0.0.2
author = user202729
description = Plover plugin to add comment/meta-information to the outline definition.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover-comment
classifiers =
    Environment :: Plugins
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
packages =
    plover_comment

[options.entry_points]
plover.command =
    comment = plover_comment:comment
    cmt = plover_comment:comment
plover.meta =
    comment = plover_comment:comment_meta
    cmt = plover_comment:comment_meta
